[package]
name = "bfes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bfes"
crate-type = ["staticlib"]

[features]
c-headers = ["safer-ffi/headers"]

[dependencies]
safer-ffi = { version = "*", features = ["proc_macros"] }
lazy_static = "1.4.0"
rand = "0.8.5"