[package]
name = "bfes"
version = "0.1.0"
edition = "2021"
description = "Brute force embedding (vector) search library"
license = "Apache-2.0"
repository = "https://github.com/spullara/bfes"
keywords = ["nearestneighbor", "knn", "embedding", "vector", "search"]
categories = ["algorithms", "data-structures"]
authors = ["Sam Pullara"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bfes"
crate-type = ["staticlib"]

[features]
c-headers = ["safer-ffi/headers"]

[dependencies]
safer-ffi = { version = "0.1.0", features = ["proc_macros"] }
lazy_static = "1.4.0"
rand = "0.8.5"
itertools = "0.10.3"

[profile.bench]
debug = true
